<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/screen_margin">

    <ImageView
        android:id="@+id/imageview_task_priority"
        android:layout_width="@dimen/priority_image_width"
        android:layout_height="@dimen/priority_image_height"
        android:layout_gravity="center_vertical"
        android:src="@drawable/shape_high_priority"
        android:contentDescription="@string/task_priority" />
    <TextView
        android:id="@+id/textview_task_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/imageview_task_priority"
        android:layout_alignTop="@id/imageview_task_priority"
        android:layout_alignEnd="@id/imageview_task_priority"
        android:layout_alignBottom="@id/imageview_task_priority"
        android:gravity="center"
        android:textColor="@color/colorTaskDate"
        android:textSize="@dimen/text_minimum"
        android:textStyle="bold"
        android:text="26.Apr" />

    <LinearLayout
        android:layout_toEndOf="@+id/imageview_task_priority"
        android:layout_toStartOf="@+id/switch_task_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/screen_margin"
        tools:ignore="RtlSymmetry">
        <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_task_item_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>
        <TextView
            android:id="@+id/textview_task_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lorem_ipsum_title"
            android:textSize="@dimen/task_title_size" />
        <TextView
            android:id="@+id/textview_task_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lorem_ipsum_text" />
    </LinearLayout>
    <Switch
        android:id="@+id/switch_task_status"
        android:switchMinWidth="@dimen/switch_size"
        android:layout_width="@dimen/switch_size"
        android:layout_height="@dimen/switch_size"
        android:layout_centerInParent="true"
        android:layout_alignParentEnd="true"
        android:textOn="@string/done"
        android:textOff="@string/not_done"/>

</RelativeLayout>